--- a/index.html
+++ b/index.html
@@ -1190,7 +1190,7 @@ Mablark s’acquitte de sa dette.
 	&lt;&lt;set $gamechapter = &quot;La Nuit du Métal Carnassier&quot;&gt;&gt;	
 	&lt;&lt;nextDay&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
-Parfaitement remis de ses dernières mésaventures, Mablark décide qu’il est temps de reprendre le chemin de sa quête héroïque. Notre valeureux guerrier équipé de son gourdin Anduril est prêt à affronter les plus grands périls. Cette fois-ci, Mablark traverse la forêt d’Arrakis sans encombre et parvient à un village d’humains. Alors qu’il s’apprêtait à franchir les portes de la cité, des sonorités sataniques attirent l’oreille affutée de Mablark. Se guidant à l’aide de ses mélopées venues du tréfont des enfers, il parvient devant l&#39;entrée d&#39;une grotte dans laquelle les tambours du chaos résonnent. Ca fait bien longtemps qu&#39;il n&#39;a pas dansé pour honorer Crom. Heureux hasard, il s’agit des Meatbodies, des bardes invocateurs de Mort très en vogue chez les orks.
+Parfaitement remis de ses dernières mésaventures, Mablark décide qu’il est temps de reprendre le chemin de sa quête héroïque. Notre valeureux guerrier équipé de son gourdin Anduril est prêt à affronter les plus grands périls. Cette fois-ci, Mablark traverse la forêt d’Arrakis sans encombre et parvient à un village d’humains troglodytes. Alors qu’il s’apprêtait à franchir les portes de la cité, des sonorités sataniques attirent l’oreille affutée de Mablark. Se guidant à l’aide de ses mélopées venues du tréfont des enfers, il parvient devant l&#39;entrée d&#39;une grotte dans laquelle les tambours du chaos résonnent. Ca fait bien longtemps qu&#39;il n&#39;a pas dansé pour honorer Crom. Heureux hasard, il s’agit des Meatbodies, des bardes invocateurs de Mort très en vogue chez les orks.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Pénétrer dans la grotte et se joindre à la transe.&lt;/div&gt;&#39; &#39;metal1&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
@@ -1224,7 +1224,7 @@ Il a troqué sa tunique fétiche contre des frusques affreuses brodées d’insi
 — &lt;span class=&quot;bad-news&quot;&gt;PV &lt;&lt;= _healthLoss&gt;&gt;&lt;/span&gt;.
 — &lt;span class=&quot;bad-news&quot;&gt;gold &lt;&lt;= _goldLoss&gt;&gt;&lt;/span&gt;.
 &lt;&lt;/if&gt;&gt;
-Alors que Mablark quitte la grotte sombre, en titubant à cause de la quantité trop importante d’hydromel ingéré, il aperçoit, dans un coin sombre, l’enseigne lumineuse de Jeff Bezorc le Livreur Éternel qui brille comme un soleil.
+Alors que Mablark quitte la grotte sombre, en titubant à cause de la quantité trop importante d’hydromel ingéré, il aperçoit, dans un coin sombre, l’enseigne lumineuse de Jeff Bezorc le Livreur Éternel qui brille comme un soleil. De part et d’autre de l’enseigne, deux sublimes sirènes, Amah et Zonn envoûtent les passants de leur chant pour les inciter à pénétrer dans la boutique.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Se diriger vers la lumière, tel un moustique.&lt;/div&gt;&#39; &#39;marchand2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
@@ -1268,7 +1268,7 @@ Le marchand propose les objets suivants, les CGV stipulant que tout objet acquis
     [[5-&gt;youtube]]
     [[6-&gt;bracelet]]
     [[7-&gt;marchand1]]
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="32" name="skyvall1" tags="" position="425,1300" size="100,100">&lt;&lt;nobr&gt;&gt;
+&lt;/div&gt;,</tw-passagedata><tw-passagedata pid="32" name="skyvall1" tags="" position="425,1300" size="100,100">&lt;&lt;nobr&gt;&gt;
 	&lt;&lt;set $gamechapter = &quot;Les montagnes de Skiväll&quot;&gt;&gt;
 	&lt;&lt;nextDay&gt;&gt;
 &lt;&lt;/nobr&gt;&gt;
@@ -1292,9 +1292,9 @@ Dans une taverne enfumée, Mablark le Glabre sirote une tisane médicinale (dos 
 Soudain, un mystérieux vieillard encapuchonné s’approche : Morbagh le Barbu.
 
 — « La vérité est là, Mablark. Tu vis prisonnier dans… la Matrice des Gafam. »
-De sa manche usée, il sort deux étranges talismans :
+De sa manche usée, il sort deux étranges fruits :
 
-* Une &lt;span style=&quot;color:red;&quot;&gt;baie écarlate de copyleft&lt;/span&gt; : promesse de liberté.
+* Une &lt;span style=&quot;color:red;&quot;&gt;baie écarlate de Koh pi left&lt;/span&gt; : promesse de liberté.
 * Une &lt;span style=&quot;color:blue;&quot;&gt;dragée bleue de Microsoftus&lt;/span&gt; : promesse de sécurité… et de mises à jour forcées.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
@@ -1319,13 +1319,13 @@ De sa manche usée, il sort deux étranges talismans :
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="35" name="tavern3" tags="" position="350,2575" size="100,100">Morbagh le barbu s’agace face à toi. Le refus ne semble pas une option acceptable car il tend la main vers son cimeterre et menace de t’égorger si tu ne prends pas une décision.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Choisir &lt;span style=&quot;color:red;&quot;&gt;la baie écarlate&lt;/span&gt;.&lt;/div&gt;&#39; &#39;tavern1&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
-    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Choisir &lt;span style=&quot;color:blue;&quot;&gt;la dragée bleue&lt;/span&gt;.&lt;/div&gt;&#39; &#39;tavern2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Choisir &lt;span style=&quot;color:red;&quot;&gt;la baie écarlate&lt;/span&gt;.&lt;/div&gt;&#39; &#39;tavern2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
+    &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Choisir &lt;span style=&quot;color:blue;&quot;&gt;la dragée bleue&lt;/span&gt;.&lt;/div&gt;&#39; &#39;tavern1&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
   &lt;/div&gt;
 &lt;&lt;/nobr&gt;&gt;
 &lt;div class=&#39;no-show&#39;&gt;
-    [[1-&gt;tavern1]]
-    [[2-&gt;tavern2]]
+    [[1-&gt;tavern2]]
+    [[2-&gt;tavern1]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="36" name="tavern2" tags="" position="175,2675" size="100,100">Mablark avale la baie rouge. Aussitôt, le monde se fissure : les murs de la taverne deviennent des écrans remplis de lignes de code, les serveurs des processeurs, et le tavernier un captcha ambulant.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
@@ -1541,7 +1541,7 @@ A cet instant, le tavernier secoue l’épaule de Mablark “on va fermer mon bo
 En bon canard, Mablark rentre à la yourte familiale, troquant la promesse d’un pogo endiablé dans une grotte humide contre une quête domestique de rang légendaire :  
 le tri du linge sale, l’alignement sacré des coussins sur le canapé, et l’éradication méthodique des moutons de poussière niveau 3.  
 Koralourk, son épouse mi-orque mi-déesse du rangement, observe la scène avec ce regard qui perce les défenses magiques et les excuses les plus obscures.  
-Mablark tente bien un sortilège d’illusion — invoquant une soi-disant « urgence en prod » — mais la sorcière du foyer n’est pas dupe fait semblant de le croire et le laisse aller lire dans ses quartiers en haussant les épaules.
+Mablark tente bien un sortilège d’illusion — invoquant une soi-disant « urgence en prod » — mais la sorcière du foyer n’est pas dupe. Elle fait semblant de le croire et le laisse aller lire dans ses quartiers en haussant les épaules.
 Éreinté mais nourri en douce par quelques snacks volés dans la réserve, Mablark regagne un peu de vigueur… au prix de sa dignité sociale et d’un moral qui prend la tangente.  
 
 — &lt;span class=&quot;good-news&quot;&gt;PV +5&lt;/span&gt;  
@@ -1555,6 +1555,7 @@ Mablark tente bien un sortilège d’illusion — invoquant une soi-disant « ur
 &lt;div class=&#39;no-show&#39;&gt;
     [[1-&gt;canard2]]
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="50" name="canard2" tags="" position="650,2100" size="100,100">Il fait déjà nuit, mais Mablark aperçoit au loin l’enseigne lumineuse de Jeff Bezorc le Livreur Éternel, qui brille comme un soleil.
+De part et d’autre de l’enseigne, deux sublimes sirènes, Amah et Zonn envoûtent les passants de leur chant pour les inciter à pénétrer dans la boutique.
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Se diriger vers la lumière, tel un moustique.&lt;/div&gt;&#39; &#39;marchand2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
