add missing image

--- a/index.html
+++ b/index.html
@@ -1276,7 +1276,7 @@ La famille parvient après un voyage sans encombre à la grotte des sources chau
 Munis de planches vernies, père et fille atteignent le haut de la Montagne. Mablark, dos fragile mais cœur vaillant, s’élance avec ce qui ressemblerait presque à de l’assurance. À ses côtés, Olivarn glisse avec une agilité insolente, portée par le vent. Alors qu’elle dépasse son père, Olivarn lui lance :
 — « Allez, père ! On dirait un nain arthritique ! » Piqué dans son orgueil, Mablark se penche, prend de la vitesse et fonce tête baissée sur la piste glacée.
 Le vent siffle, les arbres défilent, la montagne tremble sous son élan.
-
+&lt;div class=&#39;img-holder&#39;&gt;&lt;img src=&quot;img/ski.jpeg&quot; class=&quot;landscape&quot;&gt;&lt;/div&gt;
 &lt;&lt;nobr&gt;&gt;
     &lt;div class=&quot;choices&quot;&gt;
     &lt;&lt;link &#39;&lt;div class=&quot;choice-item&quot;&gt;Continuer.&lt;/div&gt;&#39; &#39;skyvall2&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;
